--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@
     color: black;
     margin-right: 10px;
 }
+
+.introContainer {
+    position: relative;
+    top: 20vh;
+    
+    border: 1px solid;
+    border-color: red;
+}
