--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Inter', sans-serif;
-    min-height: 98vh;
+    min-height: 95vh;
 }
 
 .taskbar {
@@ -45,6 +45,7 @@ body {
 }
 
 .taskbar .name a{
+    cursor: default;
     font-size: 20px;
     color: black;
     margin-left: 10px;
@@ -107,4 +108,5 @@ body {
 
     position: sticky;
     top: 100%;
+    margin: 10px 25px;
 }
