--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Inter', sans-serif;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 .taskbar {
@@ -113,6 +114,20 @@ body {
 
 .project-container {
     position: absolute;
+    margin: 0;
+    padding: 0;
     top: 100vh;
+    width: 100vw;
+    left: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     border: 1px solid orange;
+}
+
+.project-container .project-header {
+
+    font-size: 22px;
+    border: 1px solid red;
 }
