--- a/style.css
+++ b/style.css
@@ -118,16 +118,23 @@ body {
     padding: 0;
     top: 100vh;
     width: 100vw;
+    max-width:100%;
     left: 0;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    border: 1px solid orange;
+
+    border: 2px solid orange;
 }
 
 .project-container .project-header {
-
+    position: relative;
     font-size: 22px;
-    border: 1px solid red;
+    border: 1px solid black;
+    text-align: center;
+    padding: 0;
+    margin-bottom: 0;
+}
+
+.project-container .example-container {
+    position: relative;
+    top: 100px;
+    border: 2px solid blue;
 }
