--- a/style.css
+++ b/style.css
@@ -135,6 +135,12 @@ body {
 
 .project-container .example-container {
     position: relative;
-    top: 100px;
     border: 2px solid blue;
+    
+    display: grid;
+    grid-column-gap: 50px;
+    grid-template-columns: repeat(2, auto);
+    justify-content:space-evenly;
+
+
 }
