--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .taskbar {
@@ -186,6 +188,8 @@ body {
     border-right: none;
     border-left: none;
     border-bottom: none;
+
+    margin-top: auto;
 }
 
 /* NEED TO MAKE FOOTER AT BOTTOM OF PAGE */
