--- a/style.css
+++ b/style.css
@@ -108,8 +108,7 @@ body {
 }
 
 .project-container {
-    position: absolute;
-    margin: 0;
+    margin-top: 35vh;
     padding: 0;
     top: 100vh;
     width: 100vw;
@@ -182,7 +181,8 @@ body {
 
 .footer-container {
     background-color: lightgray;
-    position: absolute;
+
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -191,8 +191,6 @@ body {
     border-right: none;
     border-left: none;
     border-bottom: none;
-
-    bottom: 0;
 
 }
 
