--- a/style.css
+++ b/style.css
@@ -181,12 +181,13 @@ body {
 
 .footer-container {
     background-color: lightgray;
-
+    left: 0;
     bottom: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+    
     border-top: 1px solid lightgrey;
     border-right: none;
     border-left: none;
@@ -194,4 +195,7 @@ body {
 
 }
 
-/* NEED TO MAKE FOOTER AT BOTTOM OF PAGE */
+.phone, .email, .socials, .tbd {
+    border: 2px solid red;
+    display: block;
+}
