--- a/style.css
+++ b/style.css
@@ -180,13 +180,11 @@ body {
 }
 
 .footer-container {
-    background-color: lightgray;
     left: 0;
-    bottom: 0;
-
+    bottom: 0;  
+    height: 10vh;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    text-align: center;
+    grid-template-columns: repeat(4, 1fr);  
     
     border-top: 1px solid lightgrey;
     border-right: none;
@@ -195,7 +193,8 @@ body {
 
 }
 
-.phone, .email, .socials, .tbd {
-    border: 2px solid red;
+.phone-container, .email-container, .socials-container, .tbd-container {
     display: block;
+    /* border: 2px solid red; */
+    margin-left: 60px;
 }
