--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ body {
 
 .project-container {
     margin-top: 50vh;
+    margin-bottom: 25px;
     padding: 0;
     top: 100vh;
     width: 100vw;
@@ -165,8 +166,8 @@ body {
     left: 50%;
 }
 
-.word-game .description-left,
-.hackathon .description-left {
+.word-game .word-info,
+.hackathon .hackathon-info {
     position: absolute;
     left: 10%;
     top: 35%;
@@ -179,12 +180,24 @@ body {
     left: 4%;
 }
 
-.casino-sim .description-right,
-.hangman .description-right {
+.casino-sim .casino-info,
+.hangman .hangman-info {
     position: absolute;
     left: 55%; 
     top: 35%;
     right: 10%;   
+}
+
+.example-container img {
+    transition-duration: 0.5s; /* Set the overall transition duration */
+
+    /* Set the initial scale for the non-hovered state */
+    transform: scale(1);
+}
+
+.example-container img:hover {
+    transition-duration: 0.5s;
+    transform: scale(1.1);
 }
 
 .footer-container {
