--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ body {
     display: flex;
     position: relative;
     top: 25vh;
-    width: 45vw;
+    min-width: 30vw;
+    max-width: 50vw;
     height: 50vh;   
     margin-left: 25vw;
 
@@ -154,7 +155,7 @@ body {
 .project-container .hackathon,
 .project-container .hangman {
     position: relative;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 
 .word-game .word-picture,
