--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ body {
 .casino-sim .casino-picture, 
 .hangman .hangman-picture {
     right: 50%;
+    border: 1px solid black;
 }
 
 .casino-sim .casino-info,
