Formatted footer text alignment to center

--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ body {
     border-left: none;
     border-bottom: none;
 
+    text-align: center;
 }
 
 .email-container, .socials-container, .tbd-container {
