--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ body {
 
 .taskbar {
     list-style-type: none;
-    width: 100vw;
-    max-width: 100%;
+    /* width: 100vw; */
+    min-width: 100%;
     padding-top: 0;
     margin: 0px 0px;
-    height: 7vh;
+    min-height: 7vh;
     position: fixed;
     display: flex;
     /* Make taskbar overlap everything */
@@ -203,23 +203,25 @@ body {
 }
 
 .footer-container {
+    position: relative;
+    display: flex;
+
+
     background-color: lightgray;
     left: 0;
     bottom: 0;  
-    height: 10vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);  
-    
-    border-top: 1px solid lightgrey;
+    min-height: 10vh;
+    width: 100%;
+
+    /* border-top: 1px solid lightgrey;
     border-right: none;
     border-left: none;
-    border-bottom: none;
-
+    border-bottom: none; */    
     text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .email-container, .socials-container, .copyright-container {
-    display: block;
-    /* border: 2px solid red; */
-    margin-left: 60px;
+    display: inline-block;
 }
