--- a/style.css
+++ b/style.css
@@ -130,15 +130,15 @@ body {
 }
 
 .project-container .project-header {
-    background-color: lightgray;
+    /* background-color: lightgray; */
+    display: flex;
+    align-items: center;
     border: 2px solid lightgray;
     position: relative;
     font-size: 22px;
-
-    text-align: center;
+    height: 80px;
+    justify-content: center;
     padding: 0;
-    margin-bottom: 0;
-
 }
 
 .project-container .example-container {
@@ -150,7 +150,6 @@ body {
     grid-template-columns: repeat(2, 1fr);
     justify-content:space-evenly;
     margin-top: 50px;
-    margin-bottom: 25px;
 }
 
 .example-container img {
