Adding new section for upcoming work that will be two 2x1 grid next to each other

--- a/style.css
+++ b/style.css
@@ -201,6 +201,12 @@ body {
     transform: scale(1.1);
 }
 
+.upcoming-container {
+    border: 1px solid red;
+    width: 50vw;
+    height: 40vh;
+}
+
 .footer-container {
     position: relative;
     display: flex;
