--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
 }
 
 #project-section {
-    padding-top: 30px;
+    padding-top: 50px;
 }
 
 .project-container .project-header {
@@ -202,9 +202,23 @@ body {
 }
 
 .upcoming-container {
-    border: 1px solid red;
+    position: relative;
+    left: 25vw;
     width: 50vw;
     height: 40vh;
+    margin: 50px 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.upcoming-container .left-grid,
+.upcoming-container .right-grid {
+    display: grid;
+    border: 1px solid black;
+    grid-template-rows: repeat(2, 1fr);
+    width: 50%;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-container {
