--- a/style.css
+++ b/style.css
@@ -201,6 +201,10 @@ body {
     transform: scale(1.1);
 }
 
+.grid-container {
+    display: grid;
+}
+
 .footer-container {
     position: relative;
     display: flex;
