--- a/style.css
+++ b/style.css
@@ -201,6 +201,31 @@ body {
     transform: scale(1.1);
 }
 
+.card-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border: 1px solid red;
+    border-radius: 25px;
+    width: 25vw;
+    left: 12.5vw;
+}
+
+.card-container .face {
+    text-align: center;
+    background-color: lightgray;
+    border-radius: 25px;
+}
+
+.card-container .content {
+    display: block;
+    background-color: lightcoral;
+}
+
+.card-container:hover .content {
+    display: none;
+}
+
 .footer-container {
     position: relative;
     display: flex;
@@ -209,7 +234,7 @@ body {
     bottom: 0;  
     min-height: 10vh;
     width: 100%;
-
+    margin-top: 100px;
     /* border-top: 1px solid lightgrey;
     border-right: none;
     border-left: none;
