--- a/style.css
+++ b/style.css
@@ -206,9 +206,27 @@ body {
     flex-direction: column;
     position: relative;
     border: 1px solid lightgray;
+    min-height: 0;
+}
+
+#container1 {
     width: 25vw;
     left: 12.5vw;
-    min-height: 0;
+}
+
+#container2 {
+    width: 25vw;
+    left: 12.5vw;
+}
+
+#container3 {
+    width: 25vw;
+    left: 62.5vw;
+}
+
+#container4 {
+    width: 25vw;
+    left: 62.5vw;
 }
 
 .card-container .face {
