--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
 
 .project-container {
     margin-top: 50vh;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
     padding: 0;
     top: 100vh;
     width: 100vw;
@@ -202,31 +202,13 @@ body {
 }
 
 .card-container {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     position: relative;
     border: 1px solid lightgray;
+    left: 10vw;
+    width: 20vw;
     min-height: 0;
-}
-
-#container1 {
-    width: 25vw;
-    left: 12.5vw;
-}
-
-#container2 {
-    width: 25vw;
-    left: 12.5vw;
-}
-
-#container3 {
-    width: 25vw;
-    left: 62.5vw;
-}
-
-#container4 {
-    width: 25vw;
-    left: 62.5vw;
 }
 
 .card-container .face {
