--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
     /* background-color: lightgray; */
     display: flex;
     align-items: center;
-    border: 2px solid lightgray;
+    border-top: 1px solid lightgray;
     position: relative;
     font-size: 22px;
     height: 80px;
@@ -203,26 +203,37 @@ body {
 
 .big-container {
     position: relative;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 25px;
-    row-gap: 50px;
-    justify-content: space-between;
     border: 1px solid black;
-    max-width: 75vw;
-    left: 12.5vw;
+    max-width: 100vw;
+
   }
+
+.big-container .wip {
+    border: 1px solid blue;
+    text-align: center;
+}
+
+.circle-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 25px;
+}
   
 .circle {
-    position: relative;
-    left: 50vw;
-    background-color: purple;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px; 
+    background-color: lightgray;
+    border-radius: 20%;
+    width: 250px;
+    height: 250px; 
     /* width and height can be anything, as long as they're equal */
   }
 
+
+
+
+
+
+
+  
 .footer-container {
     position: relative;
     display: flex;
