--- a/style.css
+++ b/style.css
@@ -262,6 +262,12 @@ body {
     display: block;
 }
 
+.gif {
+    position: absolute;
+    left: 90vw;
+    bottom: 80px;
+}
+
 .footer-container {
     position: relative;
     display: flex;
@@ -270,11 +276,7 @@ body {
     bottom: 0;  
     min-height: 10vh;
     width: 100%;
-    margin-top: 100px;
-    /* border-top: 1px solid lightgrey;
-    border-right: none;
-    border-left: none;
-    border-bottom: none; */    
+    margin-top: 100px;   
     text-align: center;
     justify-content: space-evenly;
     align-items: center;
