--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body {
   }
 
 .container {
-    border-top: 1px solid lightgray;
+    border: 1px solid red;
     text-align: center;
 }
 
@@ -254,9 +254,9 @@ body {
     background-color: lightgray;
 }
 
-.card-container .content {
-    display: none;
-}
+/* .card-container .content {
+    display: hidden;
+} */
 
 .card:hover .content {
     display: block;
@@ -264,7 +264,7 @@ body {
 
 .gif {
     position: absolute;
-    left: 90vw;
+    left: 92vw;
     bottom: 80px;
 }
 
@@ -276,7 +276,7 @@ body {
     bottom: 0;  
     min-height: 10vh;
     width: 100%;
-    margin-top: 100px;   
+    margin-top: 200px;   
     text-align: center;
     justify-content: space-evenly;
     align-items: center;
