--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 .intro-container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-direction: row;
     position: relative;
@@ -79,7 +79,7 @@ body {
 }
 
 .intro-container .bio-container {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     position: relative;
     width: 40%;
 
@@ -88,7 +88,7 @@ body {
 
 .intro-container h1 {
     font-size: 70px;
-    margin-top: 60px;
+    margin-top: 10%;
     margin-bottom: 30px;
 }
 
@@ -106,7 +106,7 @@ body {
     position: relative;
     height: 100%;
     width: 60%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
