--- a/style.css
+++ b/style.css
@@ -124,14 +124,14 @@ body {
     padding: 0;
     top: 100vh;
     width: 100vw;
-    max-width:100%;
+    max-width: 100%;
     left: 0;
 
     /* border: 2px solid orange; */
 }
 
 #project-section {
-    padding-top: 48px;
+    padding-top: 6.5vh;
 }
 
 .project-container .project-header {
@@ -164,7 +164,6 @@ body {
 
 .project-container .word-game,
 .project-container .hackathon {
-    border: 1px solid red;
     display: flex;
     flex-direction: row-reverse;
 }
@@ -179,23 +178,24 @@ body {
 .hackathon .hackathon-picture,
 .casino-sim .casino-picture, 
 .hangman .hangman-picture {
+    border: 1px solid black;
     width: 550px;
     height: 350px;
 }
 
 .word-game .word-info,
-.hackathon .hackathon-info {
-    border: 1px solid green;
-    max-width: 40%;
-    align-self: center;
-    margin: 0 30px;
-}
-
+.hackathon .hackathon-info,
 .casino-sim .casino-info,
 .hangman .hangman-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightgray;
+    max-width: 25%;
+    height: 100%;
     align-self: center;
-    margin: 0 20px 0 38px;
-    max-width: 40%;
+    margin: 0;
+    padding: 0 15px;
 }
 
 .example-container img {
