Changing all the placeholder texts

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
     grid-row-gap: 50px ;
     grid-template-columns: repeat(2, 50vw);
     justify-content:space-evenly;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .example-container img {
@@ -173,7 +173,7 @@ body {
 .hackathon .hackathon-picture,
 .casino-sim .casino-picture, 
 .hangman .hangman-picture {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     width: 550px;
     height: 350px;
 }
@@ -186,6 +186,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: lightgray;
+    min-width: 10%;
     max-width: 25%;
     height: 100%;
     align-self: center;
