--- a/style.css
+++ b/style.css
@@ -138,6 +138,14 @@ body {
     height: 80px;
     justify-content: center;
     padding: 0;
+    margin-bottom: -30px;
+}
+
+.project-container .tooltip {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
 }
 
 .project-container .example-container {
@@ -148,7 +156,7 @@ body {
     grid-row-gap: 50px ;
     grid-template-columns: repeat(2, 50vw);
     justify-content:space-evenly;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .example-container img {
@@ -231,7 +239,7 @@ body {
 /* } */ 
 
 .container {
-    border: 1px solid lightgray;
+    border-top: 1px solid lightgray;
     text-align: center;
 }
 
@@ -239,7 +247,6 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    border: 1px solid red;
     margin-bottom: -40px;
 }
 
@@ -248,7 +255,6 @@ body {
     flex-direction: column;
     text-align: center;
     position: relative;
-    border: 1px solid red;
 }
 
 .card-container {
