--- a/style.css
+++ b/style.css
@@ -64,6 +64,16 @@ body {
     font-weight: bold;
 }
 
+@keyframes appear {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes LTR {
+    from {margin-left: 5vw;}
+    to {margin-left: 25vw;}
+}
+
 .intro-container {
     display: flex;
     flex-direction: row;
@@ -75,11 +85,14 @@ body {
     margin-left: 25vw;
     justify-content: center;
     align-items: center;
+    animation: 3s appear, 1s LTR;
+
 }
 
 .intro-container .bio-container {
     position: relative;
     width: 40%;
+    
 }
 
 .intro-container h1 {
