--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 @keyframes LTR {
-    from {margin-left: 5vw;}
+    from {margin-left: 0vw;}
     to {margin-left: 25vw;}
 }
 
@@ -85,20 +85,19 @@ body {
     margin-left: 25vw;
     justify-content: center;
     align-items: center;
-    animation: 3s appear, 1s LTR;
-
+    animation: 2.5s appear, 1.5s LTR;
 }
 
 .intro-container .bio-container {
     position: relative;
-    width: 40%;
-    
+    width: 37%;
+    margin-bottom: 5%;
 }
 
 .intro-container h1 {
     font-size: 70px;
     margin-top: 10%;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .intro-container h3 {
@@ -114,7 +113,7 @@ body {
 .intro-container .picture {
     position: relative;
     height: 100%;
-    width: 60%;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -122,8 +121,8 @@ body {
 }
 
 .intro-container img {
-    width: 80%;
-    height: 90%;
+    max-width: 80%;
+    max-height: 90%;
     border-radius: 50%;
 }
 
