--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@ body {
     position: relative;
 }
 
+@keyframes slide-down {
+    from {top: 5%;}
+    to {top: 60%;}
+}
+
 .card-container {
     display: flex;
     justify-content: space-evenly;
@@ -282,22 +287,30 @@ body {
     width: 17vw;
     height: 20vh;
     margin: 25px;
+    /* border: 1px solid blue; */
 }
 
 .card-container .face {
+    position: relative;
     height: auto;
     text-align: center;
     border: 1px solid lightgray;
     background-color: lightgray;
+    z-index: 1;
 }
 
-/* .card-container .content {
-    display: hidden;
-} */
+.card .content {
+    display: none;
+    position: absolute;
+    width: 16.9vw;
+    height: 12vh;
+    top: 0%;
+}
 
-.card .face:hover + .content {
+.card .face:hover + .content{
     display: block;
-    border: 1px solid lightgray;
+    animation: 2s slide-down, 1.5s appear;
+    animation-fill-mode: forwards ;
 }
 
 .gif {
