--- a/style.css
+++ b/style.css
@@ -270,7 +270,12 @@ body {
 
 @keyframes slide-down {
     from {top: 5%;}
-    to {top: 60%;}
+    to {top: 58%;}
+}
+
+@keyframes showBorder {
+    from {border: 0;}
+    to {border: 1px solid lightgray;}
 }
 
 .card-container {
@@ -302,14 +307,18 @@ body {
 .card .content {
     display: none;
     position: absolute;
-    width: 16.9vw;
-    height: 12vh;
+    width: 16.92vw;
+    height: auto;
     top: 0%;
+}
+
+.card .content p {
+    padding: 3px 10px;
 }
 
 .card .face:hover + .content{
     display: block;
-    animation: 2s slide-down, 1.5s appear;
+    animation: 2s slide-down, 1.5s appear, 1.1s showBorder;
     animation-fill-mode: forwards ;
 }
 
