--- a/style.css
+++ b/style.css
@@ -269,8 +269,8 @@ body {
 }
 
 @keyframes slide-down {
-    from {top: 5%;}
-    to {top: 58%;}
+    from {transform: translateY(-60%);}
+    to {transform: translateY(0%);}
 }
 
 @keyframes showBorder {
@@ -291,8 +291,7 @@ body {
 .card-container .card {
     width: 17vw;
     height: 20vh;
-    margin: 25px;
-    /* border: 1px solid blue; */
+    margin: 10px;
 }
 
 .card-container .face {
@@ -306,20 +305,15 @@ body {
 
 .card .content {
     display: none;
-    position: absolute;
-    width: 16.92vw;
+    position: relative;
     height: auto;
-    top: 0%;
-}
-
-.card .content p {
-    padding: 3px 10px;
+    max-width: 100%;
 }
 
 .card .face:hover + .content{
     display: block;
-    animation: 2s slide-down, 1.5s appear, 1.1s showBorder;
-    animation-fill-mode: forwards ;
+    animation: 2s slide-down, 1.5s appear, 4s showBorder;
+    animation-fill-mode: forwards;
 }
 
 .gif {
@@ -352,11 +346,10 @@ body {
     position: relative;
     display: flex;
     background-color: lightgray;
-    left: 0;
-    bottom: 0;  
-    min-height: 10vh;
+    bottom: 0vh;  
+    min-height: 5vh;
     width: 100%;
-    margin-top: 150px;   
+    margin-top: 150px;
     text-align: center;
     justify-content: space-evenly;
     align-items: center;
