--- a/style.css
+++ b/style.css
@@ -159,6 +159,10 @@ body {
     position: relative;
 }
 
+@keyframes fade-in {
+    to {scale: 1; opacity: 1;}
+}
+
 .project-container .example-container {
     position: relative;
     background-color: white;
@@ -176,15 +180,25 @@ body {
 }
 
 .project-container .word-game,
-.project-container .hackathon {
+.project-container .casino-sim,
+.project-container .hackathon,
+.project-container .hangman {
     display: flex;
     position: relative;
+    scale: .8; opacity: 0;
+    animation: fade-in linear forwards;
+    animation-timeline: view();
+    animation-range: cover;
+    animation-range-end: 350px;
+}
+
+.project-container .word-game,
+.project-container .hackathon {
     flex-direction: row-reverse;
 }
 
 .project-container .casino-sim,
 .project-container .hangman {
-    display: flex;
     flex-direction: row;
 }
 
