--- a/style.css
+++ b/style.css
@@ -162,9 +162,11 @@ body {
 .project-container .project-title {
     opacity: 0;
     transition: 750ms;
+    transform: translateX(25vw);
 }
 
 .project-container .project-title.show {
+    transform: translateX(0vw);
     opacity: 1;
 }
 
@@ -217,6 +219,7 @@ body {
     border: 1px solid black;
     width: 550px;
     height: 350px;
+    height: 100%;
 }
 
 .word-game .word-info,
