--- a/style.css
+++ b/style.css
@@ -250,22 +250,23 @@ body {
 
 .page3 {
     display: flex;
+    flex-direction: row;
     background-color: beige;
     height: 100vh;
     justify-content: center;
     align-items: center;
-}
-
-.container {
-    border-top: 1px solid lightgray;
-    text-align: center;
+    border: 1px solid red;
 }
 
 .card-container {
+    display: flex;
+    flex-direction: row;
     border: 1px solid black;
-    width: 350px;
-    height: 500px;
+    width: 70vw;
+    max-width: 100%;
+    height: 50vh;
     perspective: 800px;
+    gap: 5%;
 }
 
 .card-container .card {
@@ -276,7 +277,7 @@ body {
     transform-style: preserve-3d;
 }
 
-.card-container:hover > .card {
+.card-container:hover > .card { 
     cursor: pointer;
     transform: rotateY(180deg);
 }
