--- a/style.css
+++ b/style.css
@@ -258,6 +258,7 @@ body {
     border: 1px solid red;
 }
 
+
 .card-container {
     display: flex;
     flex-direction: row;
@@ -269,6 +270,12 @@ body {
     gap: 5%;
 }
 
+#card1, #card2, #card3, #card4 {
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+}
+
 .card-container .card {
     width: 100%;
     height: 100%;
@@ -277,7 +284,10 @@ body {
     transform-style: preserve-3d;
 }
 
-.card-container:hover > .card { 
+#card1:hover > .card,
+#card2:hover > .card,
+#card3:hover > .card,
+#card4:hover > .card { 
     cursor: pointer;
     transform: rotateY(180deg);
 }
