--- a/style.css
+++ b/style.css
@@ -260,12 +260,12 @@ body {
 
 
 .card-container {
+    border: 1px solid red;
     display: flex;
     flex-direction: row;
     width: 70vw;
     max-width: 100%;
     height: 50vh;
-    perspective: 800px;
     gap: 5%;
 }
 
@@ -278,15 +278,13 @@ body {
     width: 100%;
     height: 100%;
     position: relative;
-    transition: transform 1500ms;
+    transition: transform 1000ms;
+    perspective: 800px;
     transform-style: preserve-3d;
+    cursor: pointer;
 }
 
-#card1:hover > .card,
-#card2:hover > .card,
-#card3:hover > .card,
-#card4:hover > .card { 
-    cursor: pointer;
+.card.is-flipped { 
     transform: rotateY(180deg);
 }
 
