--- a/style.css
+++ b/style.css
@@ -250,23 +250,31 @@ body {
 
 .page3 {
     display: flex;
-    flex-direction: row;
     background-color: beige;
     height: 100vh;
-    justify-content: center;
-    align-items: center;
     border: 1px solid red;
 }
 
+.page3 .section-title {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    border: 1px solid red;
+    min-width: 100%;
+    top: 100;
+    height: 10vh;
+}
 
 .card-container {
+    position: absolute;
     border: 1px solid red;
     display: flex;
-    flex-direction: row;
-    width: 70vw;
+    width: 75vw;
     max-width: 100%;
     height: 50vh;
-    gap: 5%;
+    gap: 4%;
+    margin-left: 12.5vw;
+    align-self: center;
 }
 
 #card1, #card2, #card3, #card4 {
