--- a/style.css
+++ b/style.css
@@ -250,16 +250,14 @@ body {
 
 .page3 {
     display: flex;
-    background-color: beige;
+    background-color: white;
     height: 100vh;
-    border: 1px solid red;
 }
 
 .page3 .section-title {
     display: flex;
     position: relative;
     justify-content: center;
-    border: 1px solid red;
     min-width: 100%;
     top: 100;
     height: 10vh;
@@ -275,7 +273,6 @@ body {
 
 .card-container {
     position: absolute;
-    border: 1px solid red;
     display: flex;
     width: 75vw;
     max-width: 100%;
